option('decoder_arm', type : 'boolean', value : false)
option('decoder_armthumb', type : 'boolean', value : false)
option('decoder_delta', type : 'boolean', value : true)
option('decoder_ia64', type : 'boolean', value : false)
option('decoder_lzma1', type : 'boolean', value : true)
option('decoder_lzma2', type : 'boolean', value : true)
option('decoder_lz', type : 'boolean', value : true)
option('decoder_powerpc', type : 'boolean', value : false)
option('decoder_x86', type : 'boolean', value : true)

option('encoder_arm', type : 'boolean', value : false)
option('encoder_armthumb', type : 'boolean', value : false)
option('encoder_delta', type : 'boolean', value : true)
option('encoder_ia64', type : 'boolean', value : false)
option('encoder_lzma1', type : 'boolean', value : true)
option('encoder_lzma2', type : 'boolean', value : true)
option('encoder_lz', type : 'boolean', value : true)
option('encoder_powerpc', type : 'boolean', value : false)
option('encoder_x86', type : 'boolean', value : true)

option('filter_simple', type : 'boolean', value : true)
option('filter_lzma1', type : 'boolean', value : true)
option('filter_lz', type : 'boolean', value : true)
option('filter_delta', type : 'boolean', value : true)

option('mf_bt2', type : 'boolean', value : true)
option('mf_bt3', type : 'boolean', value : true)
option('mf_bt4', type : 'boolean', value : true)
option('mf_hc3', type : 'boolean', value : true)
option('mf_hc4', type : 'boolean', value : true)

option('check_crc32', type : 'boolean', value : true)
option('check_crc64', type : 'boolean', value : true)
option('check_sha256', type : 'boolean', value : true)
